--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jbdc:mysql://localhost:3306/mydatabase?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Hero23
 
+#The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.hibernate.ddl-auto=update
