--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jbdc:mysql://localhost:3306/mydatabase?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Hero23
 
 #The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+#Hibernate ddi (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
